modul domi beres, domi pingsan

--- a/wundercase/www/css/app.scss
+++ b/wundercase/www/css/app.scss
@@ -235,3 +235,7 @@ body {
 // Stylin' Mobile - splash
 /********************************************************************************************************/
 /********************************************************************************************************/
+
+.f_suggest_node {
+    border-top: 1px solid #878787;
+}
