--- a/wundercase/www/css/bootstrap.min.scss
+++ b/wundercase/www/css/bootstrap.min.scss
@@ -13,8 +13,7 @@ html {
 body {
   margin: 0;
 }
-article,
-aside,
+article, aside,
 details,
 figcaption,
 figure,
@@ -1110,7 +1109,7 @@ p {
 }
 @media (min-width: 768px) {
   .lead {
-    font-size: 21px;
+    font-size: 21px; 
   }
 }
 small,
@@ -1396,7 +1395,7 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
   .container {
     width: 750px;
   }
@@ -1410,7 +1409,7 @@ pre code {
   .container {
     width: 1170px;
   }
-}
+}*/
 .container-fluid {
   padding-right: 15px;
   padding-left: 15px;
@@ -1583,7 +1582,7 @@ pre code {
 .col-xs-offset-0 {
   margin-left: 0;
 }
-@media (min-width: 768px) {
+//@media (min-width: 768px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
   }
@@ -1740,8 +1739,8 @@ pre code {
   .col-sm-offset-0 {
     margin-left: 0;
   }
-}
-@media (min-width: 992px) {
+//}
+//@media (min-width: 992px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
   }
@@ -1898,8 +1897,8 @@ pre code {
   .col-md-offset-0 {
     margin-left: 0;
   }
-}
-@media (min-width: 1200px) {
+//}
+//@media (min-width: 1200px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
   }
@@ -2056,7 +2055,7 @@ pre code {
   .col-lg-offset-0 {
     margin-left: 0;
   }
-}
+//}
 table {
   background-color: transparent;
 }
@@ -2636,6 +2635,7 @@ select[multiple].input-lg {
   margin-bottom: 10px;
   color: #737373;
 }
+/*
 @media (min-width: 768px) {
   .form-inline .form-group {
     display: inline-block;
@@ -2682,7 +2682,8 @@ select[multiple].input-lg {
   .form-inline .has-feedback .form-control-feedback {
     top: 0;
   }
-}
+}*/
+
 .form-horizontal .radio,
 .form-horizontal .checkbox,
 .form-horizontal .radio-inline,
@@ -2699,17 +2700,18 @@ select[multiple].input-lg {
   margin-right: -15px;
   margin-left: -15px;
 }
+/*
 @media (min-width: 768px) {
   .form-horizontal .control-label {
     padding-top: 7px;
     margin-bottom: 0;
     text-align: right;
   }
-}
+}*/
 .form-horizontal .has-feedback .form-control-feedback {
   top: 0;
   right: 15px;
-}
+}/*
 @media (min-width: 768px) {
   .form-horizontal .form-group-lg .control-label {
     padding-top: 14.3px;
@@ -2719,7 +2721,7 @@ select[multiple].input-lg {
   .form-horizontal .form-group-sm .control-label {
     padding-top: 6px;
   }
-}
+}*/
 .btn {
   display: inline-block;
   padding: 6px 12px;
