--- a/wundercase/www/css/app.scss
+++ b/wundercase/www/css/app.scss
@@ -95,7 +95,7 @@ body {
     background: #fff;//#34495e;
     color: $base;
   //  font-weight: 300;
-   // font-family: 'Lato', Calibri, Arial, sans-serif;
+    font-family: 'got_lite', Calibri, Arial, sans-serif;
 }
 
 
