--- a/wundercase/www/css/all.css
+++ b/wundercase/www/css/all.css
@@ -1,1 +1,1 @@
-@charset "utf-8";@import url(app.css);@import url(bootstrap.min.css);
+@charset "utf-8";@import url(font.css);@import url(app.css);@import url(bootstrap.min.css);
